--- a/environment.yml
+++ b/environment.yml
@@ -47,12 +47,26 @@ dependencies:
   - xz=5.2.4=h1de35cc_4
   - zlib=1.2.11=h1de35cc_3
   - pip:
+    - colorama==0.4.1
+    - cycler==0.10.0
     - cython==0.29.13
+    - dotmap==1.3.8
     - fasteners==0.15
+    - future==0.18.0
     - glfw==1.8.3
     - imageio==2.6.1
+    - kiwisolver==1.1.0
+    - matplotlib==3.1.1
     - monotonic==1.5
     - mujoco-py==2.0.2.7
+    - pandas==0.25.1
     - pillow==6.2.0
+    - pyparsing==2.4.2
+    - python-dateutil==2.8.0
+    - pytz==2019.3
+    - save==0.1
+    - scipyplot==0.0.6
+    - seaborn==0.9.0
+    - torch==1.3.0
 prefix: //miniconda3/envs/continuouspred
 
