--- a/environment.yml
+++ b/environment.yml
@@ -54,6 +54,7 @@ dependencies:
     - fasteners==0.15
     - future==0.18.0
     - glfw==1.8.3
+    - hydra==2.5
     - imageio==2.6.1
     - kiwisolver==1.1.0
     - matplotlib==3.1.1
@@ -64,9 +65,8 @@ dependencies:
     - pyparsing==2.4.2
     - python-dateutil==2.8.0
     - pytz==2019.3
-    - save==0.1
     - scipyplot==0.0.6
     - seaborn==0.9.0
     - torch==1.3.0
-prefix: //miniconda3/envs/continuouspred
+prefix: /Users/alberto/.conda/envs/continuouspred
 
