--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -4,9 +4,9 @@ train_model: true
 train_model_onestep: true
 
 experiment_one_model:
-  traj_len: 300
+  traj_len: 600
   traj_len_test: 800
-  num_traj: 10
+  num_traj: 50
   split: .8
   P: false
   D: false
@@ -17,7 +17,9 @@ experiment_efficiency:
   num_traj: 10
 
 nn:
-  ensemble: false
+  ensemble:
+    use: false
+    num_nets: 10
   training:
     hid_width: 250
     hid_depth: 2
@@ -29,4 +31,4 @@ nn:
     batch: 128
     name: Adam
     split: .8
-    lr: .0001
+    lr: .003
