--- a/environment.yml
+++ b/environment.yml
@@ -6,27 +6,29 @@ dependencies:
   - asn1crypto=1.0.1=py36_0
   - atari-py=0.1.1=py36_0
   - blas=1.0=openblas
-  - ca-certificates=2019.8.28=0
-  - certifi=2019.9.11=py36_0
+  - ca-certificates=2020.1.1=0
+  - certifi=2019.11.28=py36_0
   - cffi=1.12.3=py36hb5b8e2f_0
   - chardet=3.0.4=py36_1003
   - cryptography=2.7=py36ha12b0ac_0
   - gym=0.10.5=py36_0
   - idna=2.8=py36_0
   - intel-openmp=2019.4=233
+  - joblib=0.14.1=py_0
   - libcxx=4.0.1=hcfea43d_1
   - libcxxabi=4.0.1=hcfea43d_1
   - libedit=3.1.20181209=hb402a30_0
   - libffi=3.2.1=h475c297_4
   - libgfortran=3.0.1=h93005f0_2
   - libopenblas=0.3.6=hdc02c5d_1
+  - llvm-openmp=4.0.1=hcfea43d_1
   - mkl=2019.4=233
   - mkl-service=2.3.0=py36hfbe908c_0
   - ncurses=6.1=h0a44026_1
   - nomkl=3.0=0
   - numpy=1.17.2=py36h48d439d_0
   - numpy-base=1.17.2=py36ha711998_0
-  - openssl=1.1.1d=h1de35cc_2
+  - openssl=1.1.1d=h1de35cc_3
   - pachi-py=0.0.21=py36_0
   - pip=19.2.3=py36_0
   - pybox2d=2.3.2=py36_0
@@ -37,6 +39,7 @@ dependencies:
   - python=3.6.9=h359304d_0
   - readline=7.0=h1de35cc_5
   - requests=2.22.0=py36_0
+  - scikit-learn=0.22.1=py36hebd9d1a_0
   - scipy=1.3.1=py36h1a1e112_0
   - setuptools=41.4.0=py36_0
   - six=1.12.0=py36_0
@@ -63,10 +66,12 @@ dependencies:
     - omegaconf==1.3.0
     - pandas==0.25.1
     - pillow==6.2.0
+    - plotly==4.5.0
     - pyparsing==2.4.2
     - python-dateutil==2.8.0
     - pytz==2019.3
     - pyyaml==5.1.2
+    - retrying==1.3.3
     - scipyplot==0.0.6
     - seaborn==0.9.0
     - torch==1.3.0
