--- a/conf/lorenz.yaml
+++ b/conf/lorenz.yaml
@@ -1,5 +1,19 @@
 defaults:
-  - model: one_step
+  - models: d
+
+hydra:
+  run:
+    dir: ./outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  sweep:
+    dir: ./outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+    subdir: ${hydra.job.num}
+  job:
+    config:
+      override_dirname:
+        kv_sep: '='
+        item_sep: ','
+        exclude_keys: ['random_seed']
+
 
 collect_data: true
 train_models: true
