--- a/conf/models/d.yaml
+++ b/conf/models/d.yaml
@@ -1,11 +1,12 @@
 model:
+  str: d
   prob: false
   ensemble: false
   traj: false
   training:
     hid_width: 250
     hid_depth: 2
-    E: 5
+    E: 1
   optimizer:
     epochs: 3
     batch: 128
