--- a/conf/models/p.yaml
+++ b/conf/models/p.yaml
@@ -1,11 +1,12 @@
 model:
+  str: p
   prob: true
   ensemble: false
   traj: false
   training:
     hid_width: 250
     hid_depth: 2
-    E: 5
+    E: 1
   optimizer:
     epochs: 18
     batch: 32
