--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: continuouspred
 channels:
+  - plotly
   - akode
   - defaults
 dependencies:
@@ -28,9 +29,10 @@ dependencies:
   - nomkl=3.0=0
   - numpy=1.17.2=py36h48d439d_0
   - numpy-base=1.17.2=py36ha711998_0
-  - openssl=1.1.1d=h1de35cc_3
+  - openssl=1.1.1d=h1de35cc_4
   - pachi-py=0.0.21=py36_0
   - pip=19.2.3=py36_0
+  - plotly=4.5.0=py_0
   - pybox2d=2.3.2=py36_0
   - pycparser=2.19=py36_0
   - pyglet=1.4.0a1=py36_0
@@ -39,6 +41,7 @@ dependencies:
   - python=3.6.9=h359304d_0
   - readline=7.0=h1de35cc_5
   - requests=2.22.0=py36_0
+  - retrying=1.3.3=py36_2
   - scikit-learn=0.22.1=py36hebd9d1a_0
   - scipy=1.3.1=py36h1a1e112_0
   - setuptools=41.4.0=py36_0
@@ -66,14 +69,12 @@ dependencies:
     - omegaconf==1.3.0
     - pandas==0.25.1
     - pillow==6.2.0
-    - plotly==4.5.0
     - pyparsing==2.4.2
     - python-dateutil==2.8.0
     - pytz==2019.3
     - pyyaml==5.1.2
-    - retrying==1.3.3
     - scipyplot==0.0.6
     - seaborn==0.9.0
     - torch==1.3.0
-prefix: /Users/alberto/.conda/envs/continuouspred
+prefix: /Users/howardzhang/opt/anaconda3/envs/continuouspred
 
