--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,7 +2,7 @@ defaults:
   - models: p
   - envs: reacher
 
-collect_data: true
+collect_data: false
 train_models: true
 save_data: false
 save_models: false
