--- a/conf/models/tp.yaml
+++ b/conf/models/tp.yaml
@@ -13,3 +13,20 @@ model:
     name: Adam
     split: .8
     lr: .01
+  preprocess:
+    state:
+      class: sklearn.preprocessing.StandardScaler
+      #Choose between standard scaler and min max scaler
+      """class: sklearn.preprocessing.MinMaxScaler
+            params:
+              feature_range: [-1.,1.]"""
+    index:
+      class: sklearn.preprocessing.StandardScaler
+    P:
+      class: sklearn.preprocessing.StandardScaler
+    D:
+      class: sklearn.preprocessing.StandardScaler
+    target:
+      class: sklearn.preprocessing.StandardScaler
+    output:
+      class: sklearn.preprocessing.StandardScaler
