--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,10 +2,10 @@ defaults:
   - models: d
   - envs: reacher
 
-collect_data: false
+collect_data: true
 train_models: true
-save_data: false
-save_models: true
+save_data: true
+save_models: false
 data_dir: l500_t50_v5.dat
 model_dir: l500_t50_v5.dat
 plot: false
