--- a/conf/models/tp.yaml
+++ b/conf/models/tp.yaml
@@ -22,11 +22,7 @@ model:
           #feature_range: [-1.,1.]
     index:
       class: sklearn.preprocessing.StandardScaler
-    P:
-      class: sklearn.preprocessing.StandardScaler
-    D:
-      class: sklearn.preprocessing.StandardScaler
-    target:
+    param:
       class: sklearn.preprocessing.StandardScaler
     output:
       class: sklearn.preprocessing.StandardScaler
