--- a/conf/models/tp.yaml
+++ b/conf/models/tp.yaml
@@ -8,11 +8,12 @@ model:
     hid_depth: 2
     E: 1
   optimizer:
-    epochs: 15
+    epochs: 20
     batch: 32
     name: Adam
     split: .8
-    lr: .01
+    lr: .00002
+    max_size: 20000
   preprocess:
     state:
       class: sklearn.preprocessing.StandardScaler
