--- a/conf/models/t.yaml
+++ b/conf/models/t.yaml
@@ -13,7 +13,7 @@ model:
     name: Adam
     split: .8
     lr: .00002
-    max_size: 20000
+    max_size: 50000
   preprocess:
     state:
       class: sklearn.preprocessing.StandardScaler
@@ -24,8 +24,10 @@ model:
     index:
       class: sklearn.preprocessing.MinMaxScaler
       params:
-        feature_range: [0.,1.]
+        feature_range: [-1.,1.]
     param:
-      class: sklearn.preprocessing.StandardScaler
+      class: sklearn.preprocessing.MinMaxScaler
+        params:
+          feature_range: [-1.,1.]
     output:
       class: sklearn.preprocessing.StandardScaler
