--- a/conf/models/c.yaml
+++ b/conf/models/c.yaml
@@ -1,15 +1,15 @@
 model:
-  str: de
+  str: c
   prob: false
-  ensemble: true
+  ensemble: false
   traj: false
-  delta: true
+  delta: false
   training:
     hid_width: 250
     hid_depth: 2
-    E: 5
+    E: 1
   optimizer:
-    epochs: 20
+    epochs: 16
     batch: 32
     name: Adam
     split: .8
@@ -21,7 +21,7 @@ model:
       #Choose between standard scaler and min max scaler
       #class: sklearn.preprocessing.MinMaxScaler
         #params:
-          #feature_range: [-1.,1.]
+          #feature_range: [-1.,1.]"""
     action:
       class: sklearn.preprocessing.StandardScaler
     output:
