--- a/conf/models/d.yaml
+++ b/conf/models/d.yaml
@@ -3,16 +3,17 @@ model:
   prob: false
   ensemble: false
   traj: false
+  delta: true
   training:
     hid_width: 250
     hid_depth: 2
     E: 1
   optimizer:
-    epochs: 16
+    epochs: 25
     batch: 32
     name: Adam
     split: .8
-    lr: .00005
+    lr: .00008
     max_size: 0
   preprocess:
     state:
