--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -21,7 +21,8 @@ hydra:
 
 plotting:
   models: [d, de, p, pe, t, te, tp,tpe]
-  num_eval: 10
+  num_eval_train: 3
+  num_eval_test: 3
   states: true
   mse: true
   sorted: true
