--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,11 @@
+defaults:
+  - models: t
+  - envs: reacher
+
+mode: train # train or collect
 data_dir: l500_t50_v5.dat
 model_dir: l500_t50_v5.dat
-exper_dir: false # set to a name to load models from within a subfolder in the models directory
+exper_dir: false # set to a name to save models within a subfolder in the models directory
 plot: false
 
 hydra:
@@ -17,12 +22,9 @@ hydra:
         exclude_keys: ['random_seed']
 
 plotting:
-  models: [d, de, p, pe, t, te, tp,tpe]
-  num_eval_train: 3
-  num_eval_test: 3
+  models: []
   states: true
   mse: true
-  sorted: true
 
 experiment:
   traj_len: 500
