--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -3,7 +3,7 @@ defaults:
   - envs: reacher
 
 mode: train # train or collect
-data_dir: l500_t50_v5.dat
+data_dir: l500_t100_v1.dat
 model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to save models within a subfolder in the models directory
 plot: false
@@ -20,3 +20,7 @@ hydra:
         kv_sep: '='
         item_sep: ','
         exclude_keys: ['random_seed']
+
+training:
+  num_traj: 20
+  t_range: 500
