--- a/conf/models/d.yaml
+++ b/conf/models/d.yaml
@@ -8,6 +8,9 @@ model:
     hid_width: 250
     hid_depth: 2
     E: 1
+    # Note: these do nothing for non trajectory based models
+    train_target: true
+    control_params: true
   optimizer:
     epochs: 25
     batch: 32
@@ -26,3 +29,10 @@ model:
       class: sklearn.preprocessing.StandardScaler
     output:
       class: sklearn.preprocessing.StandardScaler
+  plotting:
+    label: One Step Deterministic
+    color: '#0033ff'
+    color_plotly: rgb(0,0,128)
+    marker: o
+    marker_plotly: circle-open-dot
+
