--- a/conf/models/p.yaml
+++ b/conf/models/p.yaml
@@ -8,6 +8,9 @@ model:
     hid_width: 250
     hid_depth: 2
     E: 1
+    # Note: these do nothing for non trajectory based models
+    train_target: true
+    control_params: true
   optimizer:
     epochs: 15
     batch: 32
@@ -26,3 +29,9 @@ model:
       class: sklearn.preprocessing.StandardScaler
     output:
       class: sklearn.preprocessing.StandardScaler
+  plotting:
+    label: One Step Probabilistic
+    color: '#00c414'
+    color_plotly: rgb(0,128,0)
+    marker: D
+    marker_plotly: x-open-dot
