--- a/conf/models/pe.yaml
+++ b/conf/models/pe.yaml
@@ -8,6 +8,9 @@ model:
     hid_width: 250
     hid_depth: 2
     E: 5
+    # Note: these do nothing for non trajectory based models
+    train_target: true
+    control_params: true
   optimizer:
     epochs: 20
     batch: 32
@@ -26,3 +29,9 @@ model:
       class: sklearn.preprocessing.StandardScaler
     output:
       class: sklearn.preprocessing.StandardScaler
+  plotting:
+    label: One Step Probabilistic Ensemble
+    color: '#52b536'
+    color_plotly: rgb(20,128,20)
+    marker: D
+    marker_plotly: hourglass-open
