--- a/conf/models/te.yaml
+++ b/conf/models/te.yaml
@@ -8,6 +8,9 @@ model:
     hid_width: 250
     hid_depth: 2
     E: 5
+    # Note: these do nothing for non trajectory based models
+    train_target: true
+    control_params: true
   optimizer:
     epochs: 20
     batch: 32
@@ -32,3 +35,9 @@ model:
         feature_range: [-1.,1.]
     output:
       class: sklearn.preprocessing.StandardScaler
+  plotting:
+    label: Trajectory Based Deterministic Ensemble
+    color: '#b53636'
+    color_plotly: rgb(180,20,20)
+    marker: s
+    marker_plotly: y-down-open
