--- a/conf/models/p.yaml
+++ b/conf/models/p.yaml
@@ -11,6 +11,8 @@ model:
     # Note: these do nothing for non trajectory based models
     train_target: true
     control_params: true
+    # the state indices to worry about for model
+    state_indices: [0,1,2,3,4]
   optimizer:
     epochs: 15
     batch: 32
