--- a/conf/models/t_less_states.yaml
+++ b/conf/models/t_less_states.yaml
@@ -1,5 +1,5 @@
 model:
-  str: t_no_pid
+  str: t_less_states
   prob: false
   ensemble: false
   traj: true
@@ -10,9 +10,9 @@ model:
     E: 1
     # Note: these do nothing for non trajectory based models
     train_target: true
-    control_params: false
+    control_params: true
     # the state indices to worry about for model
-    state_indices: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
+    state_indices: [0,1,2,3,4]
   optimizer:
     epochs: 20
     batch: 32
@@ -34,8 +34,8 @@ model:
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: TD without PID parameters
-    color: '#fa8f0c'
-    color_plotly: rgb(250,143,12)
+    label: TD with less States
+    color: '#fa0c9f'
+    color_plotly: rgb(250,12,159)
     marker: s
     marker_plotly: cross-open-dot
