--- a/conf/models/d_less_states.yaml
+++ b/conf/models/d_less_states.yaml
@@ -1,9 +1,9 @@
 model:
-  str: t_less_states
+  str: d_less_states
   prob: false
   ensemble: false
-  traj: true
-  delta: false
+  traj: false
+  delta: true
   training:
     hid_width: 250
     hid_depth: 2
@@ -14,28 +14,27 @@ model:
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
   optimizer:
-    epochs: 20
+    epochs: 40
     batch: 32
     name: Adam
     split: .8
     lr: .00002
-    max_size: 50000
+    max_size: 0
   preprocess:
     state:
       class: sklearn.preprocessing.StandardScaler
-    index:
-      class: sklearn.preprocessing.MinMaxScaler
-      params:
-        feature_range: [-1.,1.]
-    param:
-      class: sklearn.preprocessing.MinMaxScaler
-      params:
-        feature_range: [-1.,1.]
+      #Choose between standard scaler and min max scaler
+      #class: sklearn.preprocessing.MinMaxScaler
+        #params:
+          #feature_range: [-1.,1.]"""
+    action:
+      class: sklearn.preprocessing.StandardScaler
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: TD with less States
-    color: '#fa0c9f'
-    color_plotly: rgb(250,12,159)
-    marker: s
-    marker_plotly: cross-open-dot
+    label: One Step Deterministic with less States
+    color: '#34eb98'
+    color_plotly: rgb(52,235,152)
+    marker: o
+    marker_plotly: circle-open-dot
+
