--- a/conf/eff.yaml
+++ b/conf/eff.yaml
@@ -3,7 +3,7 @@ defaults:
   - envs: reacher
 
 mode: train # train or plot
-data_dir: l500_t100_v1.dat
+data_dir: l500_t100_n100.dat
 model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to save models within a subfolder in the models directory
 plot: false
@@ -24,11 +24,14 @@ hydra:
 training:
   num_traj: 20
   t_range: 500
+  copies: 1
 
 plotting:
   num_traj: [1,2, 5, 10, 20, 50, 100]
+  t_range: [500]
+  copies: [1]
   models: [d, t]
-  t_range: 500
+  eval_ind: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
   eval_t_range: 100
   num_eval_train: 0
   num_eval_test: 10
