--- a/conf/models/t_40.yaml
+++ b/conf/models/t_40.yaml
@@ -1,8 +1,8 @@
 model:
-  str: d_state
+  str: t_40
   prob: false
   ensemble: false
-  traj: false
+  traj: true
   delta: false
   training:
     hid_width: 250
@@ -14,26 +14,28 @@ model:
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
   optimizer:
-    epochs: 40
+    epochs: 50
     batch: 32
     name: Adam
     split: .8
-    lr: .00002
-    max_size: 0
+    lr: .0001
+    max_size: 50000
   preprocess:
     state:
       class: sklearn.preprocessing.StandardScaler
-      #Choose between standard scaler and min max scaler
-      #class: sklearn.preprocessing.MinMaxScaler
-        #params:
-          #feature_range: [-1.,1.]"""
-    action:
-      class: sklearn.preprocessing.StandardScaler
+    index:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
+    param:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: One Step Deterministic State Based
-    color: '#8d67a6'
-    color_plotly: rgb(141,103,166)
-    marker: '*'
-    marker_plotly: star
+    label: Trajectory Based Deterministic 40 epochs
+    color: '#567892'
+    color_plotly: rgb(56,78,90)
+    marker: s
+    marker_plotly: cross-open-dot
