--- a/conf/models/pe.yaml
+++ b/conf/models/pe.yaml
@@ -13,12 +13,13 @@ model:
     control_params: true
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+      filter_rate: 0.0
   optimizer:
     epochs: 20
     batch: 32
     name: Adam
     split: .8
-    lr: .0001
+    lr: .00005
     max_size: 0
   preprocess:
     state:
