--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -2,7 +2,7 @@ defaults:
   - models: t
   - envs: reacher
 
-mode: collect # train or collect
+mode: train # train or collect
 data_dir: l500_t100_v1.dat
 model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to save models within a subfolder in the models directory
