--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -20,9 +20,10 @@ plotting:
   models: [d, de, p, pe, t, te, tp,tpe]
   num_eval_train: 0
   num_eval_test: 10
+  t_range: 500
   mse_y_max: 10000
   copies: 0
-  all: false
+  all: true
   states: true
   mse: true
   sorted: true
