--- a/conf/models/d_exper.yaml
+++ b/conf/models/d_exper.yaml
@@ -1,5 +1,5 @@
 model:
-  str: d
+  str: d_exper
   prob: false
   ensemble: false
   traj: false
@@ -17,11 +17,11 @@ model:
     t_range: 500
     num_traj: 50
   optimizer:
-    epochs: 25
+    epochs: 5
     batch: 32
     name: Adam
     split: .8
-    lr: .0001
+    lr: .00001
     regularization: 0
     max_size: 0
   preprocess:
@@ -36,9 +36,9 @@ model:
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: One Step Deterministic
-    color: '#0033ff'
-    color_plotly: rgb(0,0,128)
+    label: One Step Deterministic, less epoch
+    color: '#6433ff'
+    color_plotly: rgb(92,28,128)
     marker: o
     marker_plotly: circle-open-dot
 
