--- a/conf/models/d_limited.yaml
+++ b/conf/models/d_limited.yaml
@@ -1,5 +1,5 @@
 model:
-  str: d
+  str: d_limited
   prob: false
   ensemble: false
   traj: false
@@ -12,17 +12,17 @@ model:
     train_target: true
     control_params: true
     # the state indices to worry about for model
-    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+    state_indices: [0,1,2,3,4,5,6,7,8,9]
     filter_rate: 0.0
-    t_range: 500
-    num_traj: 50
+    t_range: 100
+    num_traj: 5
   optimizer:
-    epochs: 25
+    epochs: 50
     batch: 32
     name: Adam
     split: .8
-    lr: .0001
-    regularization: 0
+    lr: .00001
+    regularization: 0.01
     max_size: 0
   preprocess:
     state:
@@ -36,9 +36,9 @@ model:
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: One Step Deterministic
-    color: '#0033ff'
-    color_plotly: rgb(0,0,128)
-    marker: o
-    marker_plotly: circle-open-dot
+    label: One Step Deterministic, Limited Data
+    color: '#8f32a8'
+    color_plotly: rgb(143,50,168)
+    marker: x
+    marker_plotly: x
 
