--- a/conf/models/t.yaml
+++ b/conf/models/t.yaml
@@ -15,12 +15,14 @@ model:
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
     filter_rate: 0.95
     t_range: 500
+    num_traj: 50
   optimizer:
     epochs: 50
     batch: 32
     name: Adam
     split: .8
     lr: .0004
+    regularization: 0
     max_size: 50000
   preprocess:
     state:
