--- a/conf/models/t_5.yaml
+++ b/conf/models/t_5.yaml
@@ -1,5 +1,5 @@
 model:
-  str: t_less_states
+  str: t_5
   prob: false
   ensemble: false
   traj: true
@@ -13,12 +13,13 @@ model:
     control_params: true
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+    filter_rate: 0.5
   optimizer:
     epochs: 20
     batch: 32
     name: Adam
     split: .8
-    lr: .00002
+    lr: .0005
     max_size: 50000
   preprocess:
     state:
@@ -34,8 +35,8 @@ model:
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: TD with less States
-    color: '#fa0c9f'
-    color_plotly: rgb(250,12,159)
+    label: Trajectory Based Deterministic, 0.5 filtering
+    color: '#ebae34'
+    color_plotly: rgb(235,174,52)
     marker: s
     marker_plotly: cross-open-dot
