--- a/conf/models/t_9.yaml
+++ b/conf/models/t_9.yaml
@@ -1,35 +1,29 @@
 model:
-  str: te
+  str: t_9
   prob: false
-  ensemble: true
+  ensemble: false
   traj: true
   delta: false
   training:
     hid_width: 250
     hid_depth: 2
-    E: 5
+    E: 1
     # Note: these do nothing for non trajectory based models
     train_target: true
     control_params: true
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
-    filter_rate: 0.95
-    t_range: 500
-    num_traj: 50
+    filter_rate: 0.9
   optimizer:
-    epochs: 50
+    epochs: 20
     batch: 32
     name: Adam
     split: .8
-    lr: .0004
+    lr: .0005
     max_size: 50000
   preprocess:
     state:
       class: sklearn.preprocessing.StandardScaler
-        #Choose between standard scaler and min max scaler
-        #class: sklearn.preprocessing.MinMaxScaler
-      #params:
-      #feature_range: [-1.,1.]
     index:
       class: sklearn.preprocessing.MinMaxScaler
       params:
@@ -41,8 +35,8 @@ model:
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: Trajectory Based Deterministic Ensemble
-    color: '#b53636'
-    color_plotly: rgb(180,20,20)
+    label: Trajectory Based Deterministic, 0.9 filtering
+    color: '#43c91a'
+    color_plotly: rgb(67,201,26)
     marker: s
-    marker_plotly: y-down-open
+    marker_plotly: cross-open-dot
