--- a/conf/models/t_99.yaml
+++ b/conf/models/t_99.yaml
@@ -1,5 +1,5 @@
 model:
-  str: t_less_states_no_pid
+  str: t_99
   prob: false
   ensemble: false
   traj: true
@@ -10,15 +10,16 @@ model:
     E: 1
     # Note: these do nothing for non trajectory based models
     train_target: true
-    control_params: false
+    control_params: true
     # the state indices to worry about for model
-    state_indices: [0,1,2,3,4]
+    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+    filter_rate: 0.99
   optimizer:
     epochs: 20
     batch: 32
     name: Adam
     split: .8
-    lr: .00002
+    lr: .0005
     max_size: 50000
   preprocess:
     state:
@@ -34,8 +35,8 @@ model:
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: TD with less States, no PID Params
-    color: '#00dc79'
-    color_plotly: rgb(0,220,121)
+    label: Trajectory Based Deterministic, 0.99 filtering
+    color: '#18a3c9'
+    color_plotly: rgb(24,163,201)
     marker: s
     marker_plotly: cross-open-dot
