--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -1,4 +1,6 @@
+env: lorenz # lorenz or reacher
 data_dir: l500_t50_v5.dat
+data_dir_lorenz: 25.dat
 model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to load models from within a subfolder in the models directory
 plot: false
@@ -17,10 +19,9 @@ hydra:
         exclude_keys: ['random_seed']
 
 plotting:
-  models: [d, de, p, pe, t, te, tp,tpe]
+  models: [tpe] #[d, de, p, pe, t, te, tp,tpe]
   num_eval_train: 3
   num_eval_test: 3
-  states: true
+  states: false
   mse: true
-  sorted: true
-
+  sorted: false
