--- a/conf/models/d.yaml
+++ b/conf/models/d.yaml
@@ -13,6 +13,7 @@ model:
     control_params: true
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
+    state_indices_lorenz: [0,1,2]
   optimizer:
     epochs: 40
     batch: 32
@@ -37,4 +38,3 @@ model:
     color_plotly: rgb(0,0,128)
     marker: o
     marker_plotly: circle-open-dot
-
