--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -23,9 +23,9 @@ plotting:
   num_eval_train: 0
   num_eval_test: 10
   t_range: 500
-  mse_y_max: 10000
+  mse_y_max: 10
   copies: 0
-  all: true
+  all: false
   states: true
   mse: true
-  sorted: true
+  sorted: false
