--- a/conf/models/old/d_exper.yaml
+++ b/conf/models/old/d_exper.yaml
@@ -1,6 +1,6 @@
 model:
-  str: p
-  prob: true
+  str: d_exper
+  prob: false
   ensemble: false
   traj: false
   delta: true
@@ -18,11 +18,11 @@ model:
     num_traj: 50
     state_indices_lorenz: [0,1,2]
   optimizer:
-    epochs: 25
+    epochs: 5
     batch: 32
     name: Adam
     split: .8
-    lr: .00003
+    lr: .00001
     regularization: 0
     max_size: 0
   preprocess:
@@ -31,14 +31,14 @@ model:
       #Choose between standard scaler and min max scaler
       #class: sklearn.preprocessing.MinMaxScaler
         #params:
-          #feature_range: [-1.,1.]
+          #feature_range: [-1.,1.]"""
     action:
       class: sklearn.preprocessing.StandardScaler
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: One Step Probabilistic
-    color: '#00c414'
-    color_plotly: rgb(0,128,0)
-    marker: D
-    marker_plotly: x-open-dot
+    label: One Step Deterministic, less epoch
+    color: '#6433ff'
+    color_plotly: rgb(92,28,128)
+    marker: o
+    marker_plotly: circle-open-dot
