--- a/conf/models/old/d_limited.yaml
+++ b/conf/models/old/d_limited.yaml
@@ -1,6 +1,6 @@
 model:
-  str: p
-  prob: true
+  str: d_limited
+  prob: false
   ensemble: false
   traj: false
   delta: true
@@ -12,18 +12,17 @@ model:
     train_target: true
     control_params: true
     # the state indices to worry about for model
-    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+    state_indices: [0,1,2,3,4,5,6,7,8,9]
     filter_rate: 0.0
-    t_range: 500
-    num_traj: 50
-    state_indices_lorenz: [0,1,2]
+    t_range: 100
+    num_traj: 5
   optimizer:
-    epochs: 25
+    epochs: 50
     batch: 32
     name: Adam
     split: .8
-    lr: .00003
-    regularization: 0
+    lr: .00001
+    regularization: 0.01
     max_size: 0
   preprocess:
     state:
@@ -31,14 +30,15 @@ model:
       #Choose between standard scaler and min max scaler
       #class: sklearn.preprocessing.MinMaxScaler
         #params:
-          #feature_range: [-1.,1.]
+          #feature_range: [-1.,1.]"""
     action:
       class: sklearn.preprocessing.StandardScaler
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: One Step Probabilistic
-    color: '#00c414'
-    color_plotly: rgb(0,128,0)
-    marker: D
-    marker_plotly: x-open-dot
+    label: One Step Deterministic, Limited Data
+    color: '#8f32a8'
+    color_plotly: rgb(143,50,168)
+    marker: x
+    marker_plotly: x
+
