--- a/conf/models/old/t_9.yaml
+++ b/conf/models/old/t_9.yaml
@@ -1,9 +1,9 @@
 model:
-  str: p
-  prob: true
+  str: t_9
+  prob: false
   ensemble: false
-  traj: false
-  delta: true
+  traj: true
+  delta: false
   training:
     hid_width: 250
     hid_depth: 2
@@ -13,32 +13,31 @@ model:
     control_params: true
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
-    filter_rate: 0.0
-    t_range: 500
-    num_traj: 50
+    filter_rate: 0.9
     state_indices_lorenz: [0,1,2]
   optimizer:
-    epochs: 25
+    epochs: 20
     batch: 32
     name: Adam
     split: .8
-    lr: .00003
-    regularization: 0
-    max_size: 0
+    lr: .0005
+    max_size: 50000
   preprocess:
     state:
       class: sklearn.preprocessing.StandardScaler
-      #Choose between standard scaler and min max scaler
-      #class: sklearn.preprocessing.MinMaxScaler
-        #params:
-          #feature_range: [-1.,1.]
-    action:
-      class: sklearn.preprocessing.StandardScaler
+    index:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
+    param:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: One Step Probabilistic
-    color: '#00c414'
-    color_plotly: rgb(0,128,0)
-    marker: D
-    marker_plotly: x-open-dot
+    label: Trajectory Based Deterministic, 0.9 filtering
+    color: '#43c91a'
+    color_plotly: rgb(67,201,26)
+    marker: s
+    marker_plotly: cross-open-dot
