--- a/conf/models/old/t_99999.yaml
+++ b/conf/models/old/t_99999.yaml
@@ -1,37 +1,29 @@
 model:
-  str: tpe
-  prob: true
-  ensemble: true
+  str: t_99999
+  prob: false
+  ensemble: false
   traj: true
   delta: false
   training:
     hid_width: 250
     hid_depth: 2
-    E: 5
+    E: 1
     # Note: these do nothing for non trajectory based models
     train_target: true
     control_params: true
     # the state indices to worry about for model
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
-    filter_rate: 0.95
-    t_range: 500
-    num_traj: 50
-    state_indices_lorenz: [0,1,2]
+    filter_rate: 0.99999
   optimizer:
-    epochs: 50
+    epochs: 20
     batch: 32
     name: Adam
     split: .8
     lr: .0005
-    regularization: 0
     max_size: 50000
   preprocess:
     state:
       class: sklearn.preprocessing.StandardScaler
-        #Choose between standard scaler and min max scaler
-        #class: sklearn.preprocessing.MinMaxScaler
-      #params:
-      #feature_range: [-1.,1.]
     index:
       class: sklearn.preprocessing.MinMaxScaler
       params:
@@ -43,8 +35,8 @@ model:
     output:
       class: sklearn.preprocessing.StandardScaler
   plotting:
-    label: Trajectory Based Probabilistic Ensemble
-    color: '#b57f11'
-    color_plotly: rgb(180,180,25)
-    marker: p
-    marker_plotly: hash-open-dot
+    label: Trajectory Based Deterministic, 0.99999 filtering
+    color: '#db0bbf'
+    color_plotly: rgb(219,11,191)
+    marker: s
+    marker_plotly: cross-open-dot
