--- a/conf/models/pe.yaml
+++ b/conf/models/pe.yaml
@@ -18,11 +18,12 @@ model:
     num_traj: 50
     state_indices_lorenz: [0,1,2]
   optimizer:
-    epochs: 50
+    epochs: 25
     batch: 32
     name: Adam
     split: .8
     lr: .00005
+    regularization: 0.001
     max_size: 0
   preprocess:
     state:
