--- a/conf/rewards.yaml
+++ b/conf/rewards.yaml
@@ -4,8 +4,8 @@ model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to load models from within a subfolder in the models directory
 plot: false
 
-traj_model: t
-step_model: p
+traj_model: t_0
+step_model: p_0
 split: .8
 
 hydra:
