--- a/conf/envs/cartpole.yaml
+++ b/conf/envs/cartpole.yaml
@@ -2,9 +2,13 @@ env:
   name: Cartpole-v0
   state_size: 4
   action_size: 1
-  param_size: 0
+  param_size: 4
   target_size: 0
 
 
-num_trials: 20
+num_trials: 100
 trial_timesteps: 200
+
+model:
+  training:
+    state_indices: [0,1,2,3]
