--- a/conf/lqr.yaml
+++ b/conf/lqr.yaml
@@ -2,13 +2,13 @@ defaults:
   - models: t
   - envs: cartpole
 
-mode: collect # train or collect
-data_dir: l500_t100_v1.dat
-model_dir: l500_t50_v5.dat
+mode: train # train or collect
+data_dir: l200_t100_v1.dat
+model_dir: l200_t100_v1.dat
 exper_dir: false # set to a name to save models within a subfolder in the models directory
 plot: false
-video: true
-PID_test: true
+video: false
+PID_test: false
 #determines whether target is part of input data
 train_target: false
 control_params: true
