--- a/conf/models/te.yaml
+++ b/conf/models/te.yaml
@@ -12,7 +12,7 @@ model:
     train_target: true
     control_params: true
     # the state indices to worry about for model
-    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+#    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
     filter_rate: 0.95
     t_range: 500
     num_traj: 50
