--- a/conf/envs/cartpole.yaml
+++ b/conf/envs/cartpole.yaml
@@ -1,11 +1,12 @@
 env:
   name: Cartpole-v0
+  label: cartpole
   state_size: 4
   action_size: 1
   param_size: 4
   target_size: 0
 
-
+data_dir: l200_t100_v4.dat # l500_t50_v5.dat #
 num_trials: 100
 trial_timesteps: 200
 
