--- a/conf/lqr.yaml
+++ b/conf/lqr.yaml
@@ -2,8 +2,7 @@ defaults:
   - models: t
   - envs: cartpole
 
-mode: train # train or collect
-data_dir: l200_t100_v1.dat
+mode: collect # train or collect
 model_dir: l200_t100_v1.dat
 exper_dir: false # set to a name to save models within a subfolder in the models directory
 plot: false
