starting crazyflie exper

--- a/conf/envs/lorenz.yaml
+++ b/conf/envs/lorenz.yaml
@@ -6,9 +6,11 @@ env:
   param_size: 3
   target_size: 1
 
-#num_trials: 20
-#trial_timesteps: 1000
+num_trials: 25
+trial_timesteps: 500
+data_dir: l500_n25_v1.dat
 
 model:
   training:
     state_indices_lorenz: [0,1,2]
+    state_indices: [0,1,2]
