--- a/conf/crazyflie_pd.yaml
+++ b/conf/crazyflie_pd.yaml
@@ -1,10 +1,8 @@
 defaults:
   - models: t
-  - envs: reacher
+  - envs: crazyflie
 
 mode: collect # train or collect
-#data_dir: l500_t100_v1.dat
-#model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to save models within a subfolder in the models directory
 plot: false
 video: false
