--- a/conf/models/t.yaml
+++ b/conf/models/t.yaml
@@ -5,21 +5,21 @@ model:
   traj: true
   delta: false
   training:
-    hid_width: 250
-    hid_depth: 2
+    hid_width: 500 # 250
+    hid_depth: 3 # 2
     E: 1
     # Note: these do nothing for non trajectory based models
-    train_target: true
-    control_params: true
+    train_target: false # true
+    control_params: false #true
     filter_rate: 0.95
-    t_range: 500
+#    t_range: 500
     num_traj: 50
   optimizer:
     epochs: 30
     batch: 32
     name: Adam
     split: .8
-    lr: .0004
+    lr: .0008 # 4
     regularization: 0
     max_size: 100000
   preprocess:
