--- a/conf/models/p.yaml
+++ b/conf/models/p.yaml
@@ -4,6 +4,7 @@ model:
   ensemble: false
   traj: false
   delta: true
+  gp: false
   training:
     hid_width: 250
     hid_depth: 2
@@ -24,7 +25,9 @@ model:
     max_size: 0
   preprocess:
     state:
-      class: sklearn.preprocessing.StandardScaler
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
       #Choose between standard scaler and min max scaler
       #class: sklearn.preprocessing.MinMaxScaler
         #params:
