--- a/conf/models/pe.yaml
+++ b/conf/models/pe.yaml
@@ -4,6 +4,7 @@ model:
   ensemble: true
   traj: false
   delta: true
+  gp: false
   training:
     hid_width: 250
     hid_depth: 2
@@ -12,7 +13,6 @@ model:
     train_target: true
     control_params: true
     filter_rate: 0.0
-    t_range: 500
     num_traj: 50
     state_indices_lorenz: [0,1,2]
   optimizer:
