--- a/conf/models/t.yaml
+++ b/conf/models/t.yaml
@@ -4,18 +4,19 @@ model:
   ensemble: false
   traj: true
   delta: false
+  gp: false
   training:
     hid_width: 500 # 250
     hid_depth: 3 # 2
     E: 1
     # Note: these do nothing for non trajectory based models
-    train_target: false # true
-    control_params: false #true
+    train_target: true
+    control_params: true
     filter_rate: 0.95
 #    t_range: 500
     num_traj: 50
   optimizer:
-    epochs: 30
+    epochs: 22
     batch: 32
     name: Adam
     split: .8
@@ -24,7 +25,9 @@ model:
     max_size: 100000
   preprocess:
     state:
-      class: sklearn.preprocessing.StandardScaler
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
     index:
       class: sklearn.preprocessing.MinMaxScaler
       params:
