--- a/conf/models/tpe.yaml
+++ b/conf/models/tpe.yaml
@@ -4,6 +4,7 @@ model:
   ensemble: true
   traj: true
   delta: false
+  gp: false
   training:
     hid_width: 250
     hid_depth: 2
@@ -12,7 +13,6 @@ model:
     train_target: true
     control_params: true
     filter_rate: 0.95
-    t_range: 500
     num_traj: 50
   optimizer:
     epochs: 30
